# system-monitor

./: .gitignore  README.md  config.toml.example  pyproject.toml
pd_system_monitor/: library.py
pd_system_monitor/collectors/: gpu.py  system.py  systemd_user.py  ups.py
static/: sparkline.js  style.css
templates/system-monitor/: detail.html  widget.html
