[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pd-system-monitor"
version = "0.1.0"
description = "System-monitor plugin for personal-dashboard: live RAM/VRAM/disk + UPS + systemd-user health."
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
]

[project.entry-points."personal_dashboard.modules"]
system-monitor = "pd_system_monitor.library:Monitor"

[tool.setuptools.packages.find]
where = ["."]
include = ["pd_system_monitor*"]
